@@ -457,6 +457,14 @@
 					{ type: "item", code: "expandedfoods:sausagefish-normal-driedcharred",  shapeElement: "bowl/meatnugget 1/*", textureMapping: ["meatnugget", "poultry-raw"]  }, 
 					{ type: "item", code: "expandedfoods:sausagefish-cheese-charred",  shapeElement: "bowl/meatnugget 1/*", textureMapping: ["meatnugget", "poultry-raw"]  }, 
 					{ type: "item", code: "expandedfoods:sausagefish-cheese-driedcharred",  shapeElement: "bowl/meatnugget 1/*", textureMapping: ["meatnugget", "poultry-raw"]  },
+        			{ type: "item", code: "expandedfoods:sausage-bushmeat-cured",  shapeElement: "bowl/meatnugget 1/*", textureMapping: ["meatnugget", "bushmeat-raw"]  },
+        			{ type: "item", code: "expandedfoods:sausage-bushmeatcheese-cured",  shapeElement: "bowl/meatnugget 1/*", textureMapping: ["meatnugget", "bushmeat-raw"]  },
+       				{ type: "item", code: "expandedfoods:sausage-poultry-cured",  shapeElement: "bowl/meatnugget 1/*", textureMapping: ["meatnugget", "poultry-raw"]  },
+        			{ type: "item", code: "expandedfoods:sausage-poultrycheese-cured",  shapeElement: "bowl/meatnugget 1/*", textureMapping: ["meatnugget", "poultry-raw"]  },
+        			{ type: "item", code: "expandedfoods:sausage-redmeat-cured",  shapeElement: "bowl/meatnugget 1/*", textureMapping: ["meatnugget", "redmeat-raw"]  },
+        			{ type: "item", code: "expandedfoods:sausage-redmeatcheese-cured",  shapeElement: "bowl/meatnugget 1/*", textureMapping: ["meatnugget", "redmeat-raw"]  },
+					{ type: "item", code: "expandedfoods:sausagefish-normal-cured",  shapeElement: "bowl/meatnugget 1/*", textureMapping: ["meatnugget", "poultry-raw"]  }, 
+					{ type: "item", code: "expandedfoods:sausagefish-cheese-cured",  shapeElement: "bowl/meatnugget 1/*", textureMapping: ["meatnugget", "poultry-raw"]  },
 				{ type: "item", code: "expandedfoods:breadedmeatnugget-flax-bushmeat-syruppartbaked",  shapeElement: "bowl/red meat/*", textureMapping: ["meat", "breading-flax-syrup"]  },
 				{ type: "item", code: "expandedfoods:breadedmeatnugget-rice-bushmeat-syruppartbaked",  shapeElement: "bowl/red meat/*", textureMapping: ["meat", "breading-rice-syrup"]  },
 				{ type: "item", code: "expandedfoods:breadedmeatnugget-rye-bushmeat-syruppartbaked",  shapeElement: "bowl/red meat/*", textureMapping: ["meat", "breading-rye-syrup"]  },
