@@ -81,6 +81,7 @@ On hiatus until Wildcraft Herbs & Spices is updated
 
 BALANCING: 
 - Yogurt can be added to fruit bars in place of gelatin
+- Salads and cold pasta allow cured sausage - DONE!!!
 
 NEW FOOD:
 - added meatloaf?
